[gd_scene load_steps=9 format=3 uid="uid://dj7xw5i0qvrv0"]

[ext_resource type="Theme" uid="uid://chdltnsrcvssn" path="res://theme.tres" id="1_xglqn"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="2_8oft7"]
[ext_resource type="Texture2D" uid="uid://bcqlopfo0fdlc" path="res://textures/gui/GUI by Mounir Tohami.png" id="3_cj5x4"]
[ext_resource type="Shader" path="res://textures/gui/blur.gdshader" id="3_tgu8m"]
[ext_resource type="Script" path="res://scripts/volume slider.gd" id="5_5imrm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dat8l"]
shader = ExtResource("3_tgu8m")
shader_parameter/amount = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_jdd8t"]
atlas = ExtResource("3_cj5x4")
region = Rect2(0, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xtxo"]
atlas = ExtResource("3_cj5x4")
region = Rect2(49, 97, 30, 30)

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xglqn")
script = ExtResource("2_8oft7")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_dat8l")
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0

[node name="board" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -193.0
offset_right = 274.0
offset_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_jdd8t")

[node name="volume" type="Label" parent="board"]
layout_mode = 2
offset_left = 74.0
offset_top = 75.0
offset_right = 140.0
offset_bottom = 99.0
pivot_offset = Vector2(23, 12)
text = "Volume
"

[node name="volume slider" type="HSlider" parent="board"]
layout_mode = 2
offset_left = 162.0
offset_top = 75.0
offset_right = 461.0
offset_bottom = 99.0
max_value = 1.0
step = 0.001
value = 1.0
ticks_on_borders = true
script = ExtResource("5_5imrm")
bus_name = "Master"

[node name="box movement" type="TextureRect" parent="board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -62.0
offset_right = -44.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_3xtxo")

[node name="w" type="Label" parent="board"]
modulate = Color(0.259257, 0.271971, 0.29634, 1)
layout_mode = 0
offset_left = 170.0
offset_top = 155.0
offset_right = 188.0
offset_bottom = 178.0
pivot_offset = Vector2(23, 12)
text = "W
"

[node name="a" type="Label" parent="board"]
modulate = Color(0.259257, 0.271971, 0.29634, 1)
layout_mode = 0
offset_left = 151.0
offset_top = 178.0
offset_right = 166.0
offset_bottom = 201.0
pivot_offset = Vector2(23, 12)
text = "A
"

[node name="s" type="Label" parent="board"]
modulate = Color(0.259257, 0.271971, 0.29634, 1)
layout_mode = 0
offset_left = 173.0
offset_top = 178.0
offset_right = 186.0
offset_bottom = 201.0
pivot_offset = Vector2(23, 12)
text = "S"

[node name="d" type="Label" parent="board"]
modulate = Color(0.259257, 0.271971, 0.29634, 1)
layout_mode = 0
offset_left = 194.0
offset_top = 178.0
offset_right = 207.0
offset_bottom = 201.0
pivot_offset = Vector2(23, 12)
text = "D
"

[node name="to move" type="Label" parent="board"]
layout_mode = 0
offset_left = 138.0
offset_top = 243.0
offset_right = 214.0
offset_bottom = 266.0
pivot_offset = Vector2(23, 12)
text = "to move
"

[node name="box interact" type="TextureRect" parent="board"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 48.0
offset_top = -62.0
offset_right = 148.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_3xtxo")

[node name="f" type="Label" parent="board"]
modulate = Color(0.259257, 0.271971, 0.29634, 1)
layout_mode = 0
offset_left = 365.0
offset_top = 170.0
offset_right = 383.0
offset_bottom = 193.0
pivot_offset = Vector2(23, 12)
text = "F
"

[node name="to interact" type="Label" parent="board"]
layout_mode = 0
offset_left = 322.0
offset_top = 243.0
offset_right = 430.0
offset_bottom = 266.0
pivot_offset = Vector2(23, 12)
text = "to interact
"

[node name="back button" type="Button" parent="board"]
layout_mode = 0
offset_left = 98.0
offset_top = 283.0
offset_right = 241.0
offset_bottom = 316.0
text = "Back"

[node name="menu button" type="Button" parent="board"]
layout_mode = 0
offset_left = 306.0
offset_top = 283.0
offset_right = 449.0
offset_bottom = 316.0
text = "Main Menu"

[connection signal="changed" from="board/volume slider" to="." method="_on_volume_slider_changed"]
[connection signal="changed" from="board/volume slider" to="board/volume slider" method="_on_changed"]
[connection signal="value_changed" from="board/volume slider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="board/back button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="board/menu button" to="." method="_on_menu_button_pressed"]
